# jaytripper

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
.sqlx/: query-115e673205a847ade3c8200ed83f148b132335f656600c1af5505e61af057339.json  query-278095ab51df891470df088cc9a26b6896ca7ca7b6367b867b111e83cea4785a.json  query-3a9a47b39ec6bb4b90adb03d75dc93a0ceaa3a4f8b484e2bada8d6d84bba0334.json  query-ab0dde06f2ad7b8fef47a6a6cd53c672f523331ac2c1f4f8dcb1e5506699d454.json
jaytripper_app/: Cargo.toml
jaytripper_app/src/: app.rs  error.rs  lib.rs  projection_runtime.rs  signature_resolution.rs  sink.rs  state.rs
jaytripper_app/tests/: app_runtime_integration.rs
jaytripper_app/tests/support/: mod.rs
jaytripper_core/: Cargo.toml
jaytripper_core/src/: events.rs  ids.rs  lib.rs  signatures.rs  time.rs
jaytripper_core/tests/: signature_parser_fixtures.rs
jaytripper_core/tests/fixtures/signatures/: README.md  bad_columns.txt  bad_missing_id.txt  bad_percent.txt  multi_snapshot.txt  snapshot_01.txt  snapshot_02.txt  snapshot_03.txt
jaytripper_esi/: Cargo.toml
jaytripper_esi/src/: auth.rs  client.rs  config.rs  errors.rs  esi_client.rs  lib.rs  location_ingestor.rs  token_store.rs  types.rs
jaytripper_esi/src/api/: mod.rs  types.rs
jaytripper_esi/src/auth/: mod.rs  service.rs  types.rs
jaytripper_esi/tests/: keyring_real.rs
jaytripper_render/: Cargo.toml
jaytripper_store/: Cargo.toml
jaytripper_store/migrations/: 0001_event_log.sql
jaytripper_store/src/: error.rs  event_log.rs  lib.rs
jaytripper_tui/: Cargo.toml
jaytripper_tui/src/: main.rs
jaytripper_tui/src/cli/: mod.rs  root.rs  tui.rs
jaytripper_tui/src/cli/debug/: auth.rs  common.rs  events.rs  location.rs  mod.rs  state.rs  track.rs
jaytripper_ui/: Cargo.toml
