[package]
name = "jaytripper_esi"
version = "0.1.0"
edition = "2024"

[features]
real-keyring-tests = []

[dependencies]
async-trait = "0.1"
jaytripper_core = { path = "../jaytripper_core" }
rand = { version = "0.8", features = ["small_rng"] }
rfesi = "0.50"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service", "crypto-rust", "vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service", "crypto-rust", "vendored"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
url = "2"

[[test]]
name = "keyring_real"
path = "tests/keyring_real.rs"
required-features = ["real-keyring-tests"]
