[package]
name = "jaytripper_store"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
jaytripper_core = { path = "../jaytripper_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
thiserror = "2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
