[package]
name = "jaytripper_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["cargo", "derive"] }
jaytripper_app = { path = "../jaytripper_app" }
jaytripper_core = { path = "../jaytripper_core" }
jaytripper_esi = { path = "../jaytripper_esi" }
jaytripper_store = { path = "../jaytripper_store" }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["macros", "rt", "signal", "time", "sync"] }
url = "2"
